tests/integration/routes/src/three/routes/error/loader/page.data.ts
export const loader = () => {
  throw new Error('loader error');
};
